# QueuePtr

./: CMakeLists.txt  IntrusivePtrBase.h  README.md  RefCntBuffer.cpp  RefCntBuffer.h  RefCntBufferPool.cpp  RefCntBufferPool.h  ThreadSafePool.h  ThreadSafeQueue.h  main.cpp
QueuePtrTester/: CMakeLists.txt  QueuePtrTester.cpp  QueuePtrTester.sln  QueuePtrTester.vcxproj
cmake/: compilerflags.cmake
include/: IntrusivePtrBase.h  RefCntBuffer.h  RefCntBufferPool.h  ThreadSafePool.h  ThreadSafeQueue.h
src/: CMakeLists.txt  RefCntBufferPool.cpp
